// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getShapeDividerStyles Get a correct shape divider styles 1`] = `
{
  "general": {
    "height": "1px",
    "opacity": 1,
  },
  "l": {},
  "label": "Shape Divider",
  "m": {},
  "s": {},
  "xl": {},
  "xs": {},
  "xxl": {},
}
`;

exports[`getShapeDividerStyles Get a correct shape divider styles 2`] = `
{
  "general": {
    "fill": "rgb(255, 99, 71)",
  },
  "l": {
    "fill": "rgb(255, 99, 71)",
  },
  "label": "Shape Divider SVG",
  "m": {
    "fill": "rgb(255, 99, 71)",
  },
  "s": {
    "fill": "rgb(255, 99, 71)",
  },
  "xl": {
    "fill": "rgb(255, 99, 71)",
  },
  "xs": {
    "fill": "rgb(255, 99, 71)",
  },
  "xxl": {
    "fill": "rgb(255, 99, 71)",
  },
}
`;

exports[`getShapeDividerStyles Should work when block has padding 1`] = `
{
  "general": {
    "height": "1px",
    "opacity": 1,
    "top": "-10px",
  },
  "l": {},
  "label": "Shape Divider",
  "m": {},
  "s": {},
  "xl": {},
  "xs": {},
  "xxl": {},
}
`;
